@@ -1,13 +1,19 @@
 <html><head></head><body>
 
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 2.0.2 2024/6/24
+  <ul>
+    <li>編集環境で折りたたみシステムメニューのチラつきを低減</li>
+    <li>Macでの日本語翻訳を修正</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
+
 <li>Polaris Engine 2.0.1 2024/6/24
   <ul>
     <li>セリフでないメッセージでリップシンクが動作するバグを修正</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
-
 <li>Polaris Engine 2.0.0 2024/6/21
   <ul>
     <li><code>Polaris Engine 2.0.0 (Honeydew Melon)</code> をリリース</li>
